Fix ndk issues